@@ -1,19 +1,20 @@
 #!/bin/bash
 
+PASS="alkekengi"
+
 function help() {
-  echo -e "Sign all .jar files, using the certificate associated with the alias \"$USER\""
+echo -e "Create (or recreate) a key store to sing .jar file, using the key associated to the alias \"$USER\""
   echo -e
   echo -e "Usage:"
-  echo -e "\tsign [--help|-h]"
+  echo -e "\tcreateKeyStore [--help|-h]"
   echo -e "\t\tprint this message and exits."
   echo -e
-  echo -e "\tsign [--import CERT|-i CERT]"
+  echo -e "\tcreateKeyStore [--import CERT|-i CERT]"
   echo -e "\t\tcreate a new keystore, import an X.509 certificate and associate it to the alias \"$USER\""
   echo -e "\t\tNote: this assumes that the certificate is stored in the file CERT, with the name \"Imported Certificate\""
   echo -e
-  echo -e "\tsign [--rebuild|-r]"
-  echo -e "\t\tcreate a new keystore, create a new key and associate it to the alias \"$USER\""
-  echo -e "\t\tNote: this featue is still experimental"
+  echo -e "\tcreateKeyStore [--rebuild|-r]"
+  echo -e "\t\tcreate a new keystore with password \"$PASS\", create a new key and associate it to the alias \"$USER\""
   echo -e
 }
 
@@ -33,8 +34,6 @@ function import() {
 
 function rebuild() {
   rm -f ~/.keystore
-  read -p "Java keystore password: " -s PASS
-  echo
   keytool -genkeypair \
           -dname "CN=$(finger -p -l -m $USER | grep 'Name: ' | sed -e's/.*Name: //'), OU=CERN, O=CMS, L=Geneva, S=Switzerland, C=EU" \
           -alias "$USER" \
@@ -44,8 +43,12 @@ function rebuild() {
 }
 
 
-if [ "$1" == "--help" ] || [ "$1" == "-h" ]; then
+if [ "$1" == "--help" ] || [ "$1" == "-h" ] || [ "$1" == "" ]; then
   help
+  if ! [ -f ~/.keystore ]; then
+    echo -e
+    echo -e "No Java keystore found. Please create one with \"$0 --import CERT\" or \"$0 --rebuild\"."
+  fi
   exit 0
 elif [ "$1" == "--import" ] || [ "$1" == "-i" ]; then
   if ! [ -f "$2" ]; then
@@ -58,17 +61,3 @@ elif [ "$1" == "--rebuild" ] || [ "$1" == "-r" ]; then
   rebuild
   exit 0
 fi
-
-if ! [ -f ~/.keystore ]; then
-  echo -e "No Java keystore found. Please create one with \"$0 --import CERT\" or \"$0 --rebuild\"."
-  exit 1
-fi
-
-read -p "Java keystore password: " -s PASS
-echo
-for JAR in lib/*.jar ext/*.jar
-do
-  echo "Signing $JAR"
-  jarsigner -storepass "$PASS" -keypass "$PASS" "$JAR" "$USER"
-done
-
