@@ -2,7 +2,7 @@
 #  ConfDB properties
 ###################################
 
-confdb.setupCount=7
+confdb.setupCount=6
 
 confdb0.dbSetup=HLT Development
 confdb0.dbType=oracle
@@ -45,16 +45,3 @@ confdb5.dbHost=int9r1-v.cern.ch, int9r2-v.cern.ch
 confdb5.dbPort=10121
 confdb5.dbName=int9r_nolb.cern.ch
 confdb5.dbUser=cms_hlt_writer
-
-confdb6.dbSetup=MySQL Local
-confdb6.dbType=mysql
-confdb6.dbHost=localhost
-confdb6.dbPort=3306
-confdb6.dbName=hltdb
-confdb6.dbUser=username
-
-confdb.dbName=cms_rcms.cern.ch
-confdb.dbType=oracle
-confdb.dbHost=cmsonr4-v.cms
-confdb.dbUser=cms_hlt_r
-confdb.dbPwrd=convertme!
