@@ -1,3 +1,3 @@
-confdb.version=V01-06-67
-confdb.contact=raul.jimenez.estupinan@cern.ch
+confdb.version=V01-06-69
+confdb.contact=andrea.bocci@cern.ch
 confdb.url=http://j2eeps.cern.ch/cms-project-confdb-hltdev/
